--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>  
 	<h3>Калькулятор вычисления отхода выемочного участка - (ПК- , м)</h3>
-	<img src="image/picket.png" width="750" height="385" alt="схема пикетов">	
+	<img src="images/picket.png" width="750" height="385" alt="схема пикетов">	
 	<form>
 			<br>
 			<h3>ВЕРХ выемочного участка</h3>
